# qt-example

./: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp  makefile  readme.md
